--- a/custom_components/ngenic/manifest.json
+++ b/custom_components/ngenic/manifest.json
@@ -6,8 +6,5 @@
     "documentation": "https://github.com/sfalkman/ngenic-hass-platform",
     "issue_tracker": "https://github.com/sfalkman/ngenic-hass-platform/issues",
     "dependencies": [],
-    "codeowners": ["@sfalkman"],
-    "requirements": [
-        "ngenicpy==0.3.3"
-    ]
+    "codeowners": ["@sfalkman"]
 }
