--- a/custom_components/ngenic/manifest.json
+++ b/custom_components/ngenic/manifest.json
@@ -7,5 +7,5 @@
   "issue_tracker": "https://github.com/dotnetdummy/ngenic-hass-platform/issues",
   "dependencies": [],
   "codeowners": ["@sfalkman", "@dotnetdummy"],
-  "requirements": ["aiocache[memcached]==0.12.3"]
+  "requirements": []
 }
